# senseglove_ros2_ws

./: .gitignore  README.md
src/hardware_interface/senseglove_hardware/: CMakeLists.txt  package.xml
src/hardware_interface/senseglove_hardware/include/senseglove_hardware/: actuation_mode.h  joint.h  senseglove_robot.h  senseglove_setup.h
src/hardware_interface/senseglove_hardware/src/: joint.cpp  senseglove_robot.cpp  senseglove_setup.cpp
src/hardware_interface/senseglove_hardware_builder/: CMakeLists.txt  package.xml
src/hardware_interface/senseglove_hardware_builder/include/senseglove_hardware_builder/: allowed_robot.h  hardware_builder.h
src/hardware_interface/senseglove_hardware_builder/src/: hardware_builder.cpp
src/hardware_interface/senseglove_hardware_interface/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
src/hardware_interface/senseglove_hardware_interface/config/dk1/: controllers.yaml
src/hardware_interface/senseglove_hardware_interface/include/senseglove_hardware_interface/: senseglove_hardware_interface.h
src/hardware_interface/senseglove_hardware_interface/launch/: hardware.launch.py
src/hardware_interface/senseglove_hardware_interface/src/: senseglove_hardware_interface.cpp  senseglove_hardware_interface_node.cpp
src/senseglove/senseglove_description/: CMakeLists.txt  package.xml
src/senseglove/senseglove_description/meshes/collision/: MK29_DK1_Abduction_joint_v2.STL  MK29_DK1_Flexion_joint_2.STL  MK29_DK1_Flexion_joint_3.STL  MK29_DK1_HUB.STL  MK29_DK1_HUB_Swapped.STL  MK29_DK1_Thimble.STL
src/senseglove/senseglove_description/urdf/: dk1.ros2_control.xacro  dk1_left.xacro  dk1_left_voxel_visual.xacro  dk1_right.xacro  dk1_right_voxel_visual.xacro
src/senseglove/senseglove_finger_distance/: package.xml  setup.cfg  setup.py
src/senseglove/senseglove_finger_distance/senseglove_finger_distance/: finger_distance_calibration.py  finger_distance_node.py  haptics_node.py  haptics_node_action_interface.py
src/senseglove/senseglove_launch/: package.xml  setup.cfg  setup.py
src/senseglove/senseglove_launch/launch/: senseglove_finger_distance_demo.launch.py  senseglove_hardware_demo.launch.py
src/senseglove/senseglove_shared_resources/: CMakeLists.txt  package.xml
src/senseglove/senseglove_shared_resources/msg/: SenseGloveState.msg
src/senseglove/senseglove_shared_resources/srv/: PinchCalibration.srv
