<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>senseglove_hardware_interface</name>
  <version>0.0.0</version>
  <description>    The bridge between ros_control and the senseglove hardware.  </description>
  <maintainer email="rogierkrijnen@live.nl">SenseGlove</maintainer>
  <maintainer email="2330834a@student.gla.ac.uk">Florent Audonnet</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>senseglove_description</depend>
  <depend>senseglove_hardware</depend>
  <depend>senseglove_hardware_builder</depend>
  <depend>senseglove_shared_resources</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
